# stellrent-auth

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
stellrent_auth/: __init__.py  auth.py  http_auth_basic.py
tests/: development.ipynb  test_basic_auth.py  test_environment_variables.py  test_oauth2.py
tests/app/: app_basic_auth.py
